# mapfort_scripts

./: README.md
TDM/: generate_driver_behavior_analysis.py  generate_road_popularity.py  generate_tdm_areas_roads.py  generate_tdm_district_pickup_analysis.py  generate_tdm_driver_trip_profile.py
dwd/: process_area.py  process_geog.py  process_traj.py
llm/: .env  README.md  config.json  config.py  database.py  llm_service.py  main.py  pyproject.toml  requirements.txt  run.py
