[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "json5>=0.12.0",
    "openai>=1.79.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
